force-app/main/default/objects/Jira_Story__c/Jira_Story__c.object-meta.xml
<CustomObject>
    <label>Jira Story</label>
    <nameField>
        <label>Jira Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>