force-app/main/default/objects/Jira_Story__c/fields/Jira_Ticket_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket_Key__c</fullName>
    <label>Jira Ticket Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>