force-app/main/default/objects/Jira_Story__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Jira Stories</relationshipLabel>
    <relationshipName>Jira_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>