force-app/main/default/objects/Jira_Story__c/fields/Ready_for_partial__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_partial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for partial</label>
    <type>Checkbox</type>
</CustomField>