force-app/main/default/objects/Jira_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
            <value>
                <fullName>IN QA</fullName>
            </value>
            <value>
                <fullName>REOPENED</fullName>
            </value>
            <value>
                <fullName>TESTING COMPLETED</fullName>
            </value>
            <value>
                <fullName>IN UAT</fullName>
            </value>
            <value>
                <fullName>UAT COMPLETE</fullName>
            </value>
            <value>
                <fullName>READY FOR PROD</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>