force-app/main/default/objects/Jira_Story__c/fields/Story_Description__c.field-meta.xml
<CustomField>
    <fullName>Story_Description__c</fullName>
    <label>Story Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>